--- a/views/resorts/create.hbs
+++ b/views/resorts/create.hbs
@@ -1,4 +1,5 @@
 {{!-- action to route post --}}
+<h1>welcome {{ currentUser.username }}</h1>
 <form action="/resorts" method="post">
   <label for="name">name</label>
   <input type="text" name="name" id="resort-name" placeholder="name">
