--- a/views/resorts/list.hbs
+++ b/views/resorts/list.hbs
@@ -1,3 +1,7 @@
+{{#extend "stylesheets"}}
+<link rel="stylesheet" type="text/css" src="/css/list.css" />
+<link rel="stylesheet" type="text/css" src="style.css">
+{{/extend}}
 <h1>List all resorts</h1>
 <p>welcome {{ currentUser.username }}</p>
 {{#if info}}
@@ -8,10 +12,16 @@
   <li>
     <a href="/resorts/{{this._id}}/update">{{ this.name }}</a>
     <form action="/resorts/{{this._id}}/delete" method="post">
-      <button type="submit">submit</button>
+      <button type="submit">submit</button> hola que tal! :)
     </form>
   </li>
   {{/each}}
 </ul>
 
 <a href="/logout">logout</a>
+
+{{#extend "scripts"}}
+<script>
+  console.log('list.hbs')
+</script>
+{{/extend}}
